fix alighments and search loader

--- a/projects/crud/src/lib/components/attachments/attachments.component.css
+++ b/projects/crud/src/lib/components/attachments/attachments.component.css
@@ -8,6 +8,9 @@
     cursor: pointer;
     margin-left: 10px;
 }
+.delete_btn{
+    width: 15px;
+}
 .download_icon{
     cursor: pointer;
     margin-left: 10px; 
