--- a/projects/crud/src/lib/components/attachments/attachments.component.html
+++ b/projects/crud/src/lib/components/attachments/attachments.component.html
@@ -17,7 +17,7 @@
         </mat-error>
         <mat-hint class="hint">
             <pre>
-  Allowed file extensions: PDF,Doc,Docx, Xls ,Xlsx, JPEG, GIF, PNG, BMP.
+  Allowed file extensions: PDF, Doc, Docx, Xls, Xlsx, JPEG, GIF, PNG, BMP.
   Maximum file size: 1 MB.
               </pre>
         </mat-hint>
@@ -41,12 +41,12 @@
                     {{!isUploaded(file)?file.name+'.'+file.extension:file.name}}
                 </td>
                 <td>
-                    <button mat-icon-button (click)="deleteFile(file,i)">
+                    <button mat-icon-button class="delete_btn" (click)="deleteFile(file,i)">
                   <mat-icon class="delete_icon" id="{{'delete-btn-' + i}}">delete</mat-icon>
                 </button>
                 </td>
                 <td *ngIf="isUploaded(file)">
-                    <a [href]="file.file" download="file.name" target="_blank" rel="noopener noreferrer">
+                    <a mat-button [href]="file.file" download="file.name" target="_blank" rel="noopener noreferrer">
                         <mat-icon class="download_icon" id="{{'download-btn-' + i}}">cloud_download</mat-icon>
                     </a>
                 </td>
