--- a/projects/crud/src/lib/components/model-form/model-form.component.html
+++ b/projects/crud/src/lib/components/model-form/model-form.component.html
@@ -8,8 +8,9 @@
             <ng-error-handling></ng-error-handling>
             <div class="header_btn_container" *ngIf="viewConfig?.metadata?.formActions && mode==='edit'">
                 <span class="header_btns">
-                    <button mat-button class="header_btn" id="{{link.name}}-btn" *ngFor="let link of viewConfig?.metadata?.formActions"
+                    <button mat-button class="header_btn" [ngStyle]="getStyles(link)" id="{{link.name}}-btn" *ngFor="let link of viewConfig?.metadata?.formActions"
                         (click)="onAction(link)">
+                        <mat-icon *ngIf="link.icon">{{link.icon}}</mat-icon>
                         {{link.name}}
                     </button>
                 </span>
