--- a/projects/crud/src/lib/components/listing/listing.component.html
+++ b/projects/crud/src/lib/components/listing/listing.component.html
@@ -13,7 +13,8 @@
         <span class="fill-remaining-space"></span>
         <span class="fill-remaining-space"></span>
         <ng-container *ngIf="viewConfig?.metadata?.externalViews">
-            <button class="crud-views-button" mat-raised-button color="primary" *ngFor="let view of viewConfig?.metadata?.externalViews" (click)="changeView(view.link)">
+            <button class="crud-views-button" mat-raised-button color="primary"
+                *ngFor="let view of viewConfig?.metadata?.externalViews" (click)="changeView(view.link)">
                 <mat-icon>{{view.icon}}</mat-icon>
                 {{view.name}}
             </button>
@@ -25,7 +26,8 @@
     </h2>
 
     <ng-template [ngIf]="viewConfig.search.enabled">
-        <mat-expansion-panel [ngStyle]="{'display': (initialLoading)?'none':'block'}" [expanded]="true" class="crud-search">
+        <mat-expansion-panel [ngStyle]="{'display': (initialLoading)?'none':'block'}" [expanded]="true"
+            class="crud-search">
             <mat-expansion-panel-header [collapsedHeight]="'40px'" [expandedHeight]="'40px'">
                 <mat-panel-title>
                     <mat-icon>search</mat-icon>
@@ -57,20 +59,26 @@
         </button>
         <mat-menu #menu="matMenu">
             <ng-container *ngFor="let action of viewConfig.metadata.bulkActions">
-                <button mat-menu-item (click)="onAction(action)" *ngIf="selection.selected.length>=action.minLength">{{action.name}}</button>
+                <button mat-menu-item (click)="onAction(action)"
+                    *ngIf="selection.selected.length>=action.minLength">{{action.name}}</button>
             </ng-container>
         </mat-menu>
     </div>
     <mat-table [dataSource]="dataSource" class="crud-table" [ngStyle]="{'display': (initialLoading)?'none':'block'}">
-        <ng-container *ngFor="let column of columns" [matColumnDef]="column.columnDef">
+        <ng-container *ngFor="let column of columns;let i=index" [matColumnDef]="column.columnDef">
             <ng-template [ngIf]="column.columnDef === 'checked'">
                 <ng-container matColumnDef="select">
                     <mat-header-cell *matHeaderCellDef>
-                        <mat-checkbox *ngIf="viewConfig.metadata.bulkActions?.length>0" (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()" [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+                        <mat-checkbox *ngIf="viewConfig.metadata.bulkActions?.length>0"
+                            (change)="$event ? masterToggle() : null"
+                            [checked]="selection.hasValue() && isAllSelected()"
+                            [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
                         </mat-checkbox>
                     </mat-header-cell>
                     <mat-cell *matCellDef="let row">
-                        <mat-checkbox *ngIf="viewConfig.metadata.bulkActions?.length>0" (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null" [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
+                        <mat-checkbox *ngIf="viewConfig.metadata.bulkActions?.length>0"
+                            (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+                            [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
                         </mat-checkbox>
                     </mat-cell>
                 </ng-container>
@@ -79,15 +87,17 @@
             <ng-template [ngIf]="column.columnDef !== 'checked' &&
              column.columnDef !== 'actions' &&
               column.Def !== 'functions'">
-                <mat-header-cell *matHeaderCellDef>{{ column.header }}</mat-header-cell>
-                <mat-cell *matCellDef="let row">
+                <mat-header-cell id="{{getColId(column.header)}}" *matHeaderCellDef>{{ column.header }}</mat-header-cell>
+                <mat-cell id="{{'cell-'+i}}" *matCellDef="let row">
                     <ng-container *ngIf="viewConfig?.external_link?.link;else normal">
-                        <a class="clickable" (click)="redirect(row?.id)" *ngIf="(mode !== 'pick' && column.clickable); else normalCell">
+                        <a class="clickable" (click)="redirect(row?.id)"
+                            *ngIf="(mode !== 'pick' && column.clickable); else normalCell">
                             {{ column.cell(row)}}
                         </a>
                     </ng-container>
                     <ng-template #normal>
-                        <a class="clickable" [routerLink]="row?.id" *ngIf="(mode !== 'pick' && column.clickable); else normalCell">
+                        <a class="clickable" [routerLink]="row?.id"
+                            *ngIf="(mode !== 'pick' && column.clickable); else normalCell">
                             {{ column.cell(row)}}
                         </a>
                     </ng-template>
@@ -103,34 +113,39 @@
                 </mat-cell>
             </ng-template>
             <ng-template [ngIf]="column.columnDef === 'edit'">
-                <mat-header-cell *matHeaderCellDef>{{ column.header }}</mat-header-cell>
-                <mat-cell *matCellDef="let row">
+                <mat-header-cell id="{{getColId(column.header)}}" *matHeaderCellDef>{{ column.header }}</mat-header-cell>
+                <mat-cell id="edit-cell" *matCellDef="let row">
                     <a class="clickable" [routerLink]="row?.id">
                         <mat-icon>edit</mat-icon>
                     </a>
                 </mat-cell>
             </ng-template>
             <ng-template [ngIf]="column.columnDef === 'delete'">
-                <mat-header-cell *matHeaderCellDef>{{ column.header }}</mat-header-cell>
-                <mat-cell *matCellDef="let row">
+                <mat-header-cell id="{{getColId(column.header)}}" *matHeaderCellDef>{{ column.header }}</mat-header-cell>
+                <mat-cell id="delete-cell" *matCellDef="let row">
                     <a class="clickable" (click)="deleteRow(row?.id)">
                         <mat-icon>delete</mat-icon>
                     </a>
                 </mat-cell>
             </ng-template>
             <ng-template [ngIf]="column.columnDef === 'actions'">
-                <mat-header-cell *matHeaderCellDef>{{ column.header }}</mat-header-cell>
+                <mat-header-cell id="{{getColId(column.header)}}" *matHeaderCellDef>{{ column.header }}</mat-header-cell>
                 <mat-cell *matCellDef="let row">
                 </mat-cell>
             </ng-template>
         </ng-container>
         <mat-header-row *matHeaderRowDef="displayColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayColumns;" [ngClass]="{'clickable': mode === 'pick'}" (click)="_picked(row)"></mat-row>
+        <mat-row *matRowDef="let row; columns: displayColumns;" [ngClass]="{'clickable': mode === 'pick'}"
+            (click)="_picked(row)"></mat-row>
     </mat-table>
-    <mat-paginator [ngStyle]="{'display': (initialLoading)?'none':'block'}" class="crud-paginator" #paginator *ngIf="viewConfig.pagination.enabled" [length]="resultsCount" [pageIndex]="pages-1" [pageSize]="20" (page)="onChange($event)">
+    <mat-paginator [ngStyle]="{'display': (initialLoading)?'none':'block'}" class="crud-paginator" #paginator
+        *ngIf="viewConfig.pagination.enabled" [length]="resultsCount" [pageIndex]="pages-1" [pageSize]="20"
+        (page)="onChange($event)">
     </mat-paginator>
 </ng-container>
 
 <body style="margin:0px;padding:0px;overflow:hidden">
-    <iframe [hidden]="!iframeOpened" #iframe frameborder="0" style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px" height="100%" width="100%"></iframe>
+    <iframe [hidden]="!iframeOpened" #iframe frameborder="0"
+        style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px"
+        height="100%" width="100%"></iframe>
 </body>
