--- a/projects/crud/src/lib/components/attachments/attachments.component.css
+++ b/projects/crud/src/lib/components/attachments/attachments.component.css
@@ -1,68 +1,77 @@
-.upload_container{
-    display: flex;
+.upload_container {
+    display        : flex;
     justify-content: flex-start;
-    width: 100%;
+    width          : 100%;
 }
-.delete_icon{
-    color:#EF4430;
-    cursor: pointer;
-    margin-left: 10px;
+
+.delete_icon {
+    color  : #EF4430;
+    cursor : pointer;
+    padding: 0;
 }
-.delete_btn{
-    width: 15px;
+.icon_btn{
+    width: unset;
 }
-.download_icon{
-    cursor: pointer;
-    margin-left: 10px; 
-    margin-right: 20px; 
-    color:#82C572;
+
+.download_icon {
+    padding: 0;
+    cursor : pointer;
+    color  : #82C572;
 }
-.table_row{
+
+.table_row {
     text-align: left;
-    height: 50px
+    height    : 50px
 }
+
 tr.table_row th {
-    font-size:14px;
+    font-size   : 14px;
     padding-left: 10px
-  }
+}
+
 tr.border_bottom td {
-    border-top:1pt solid #c5bebe;
+    border-top: 1pt solid #c5bebe;
 }
-tr td{
-    padding-left: 10px;
+
+tr td {
+    padding-left: 3px;
 }
+
 table.attachment-table {
-    width: 95%;
-    margin-left: 13px;
-    border-collapse: collapse; 
-  }
-  table.attachment-table tr{
-      font-size:13px;
-  }
-li{
-    display: flex;
-    align-items: center;
+    width          : 95%;
+    margin-left    : 13px;
+    border-collapse: collapse;
+}
+
+table.attachment-table tr {
+    font-size: 13px;
+}
+
+li {
+    display        : flex;
+    align-items    : center;
     justify-content: flex-start;
 }
-pre{
-    font:200 10px/20px Roboto,"Helvetica Neue",sans-serif;
+
+pre {
+    font         : 200 10px/20px Roboto, "Helvetica Neue", sans-serif;
     margin-bottom: -15px
 }
 
-.thead { 
-    display: block; 
-    width: 100%;
-    height: 45px;
+.thead {
+    display: block;
+    width  : 100%;
+    height : 45px;
 }
 
 .tableBody {
-    display: block; 
-    width: 100%;
-    height: 80px;
+    display   : block;
+    width     : 100%;
+    height    : 80px;
     overflow-y: auto;
     overflow-x: auto;
 }
 
-.file-name{
+.file-name {
     width: 100%;
 }
