--- a/projects/crud/src/lib/components/model-form/model-form.component.html
+++ b/projects/crud/src/lib/components/model-form/model-form.component.html
@@ -9,8 +9,8 @@
             <div class="header_btn_container" *ngIf="viewConfig?.metadata?.formActions && mode==='edit'">
                 <span class="header_btns">
                     <ng-container *ngFor="let link of viewConfig?.metadata?.formActions">
-                        <button *ngIf="link?.isShow" mat-button class="header_btn" [ngStyle]="getStyles(link)" id="{{link.name}}-btn"
-                            (click)="onAction(link)">
+                        <button *ngIf="link?.isShown" mat-button class="header_btn" [ngStyle]="getStyles(link)"
+                            id="{{link.name}}-btn" (click)="onAction(link)">
                             <mat-icon *ngIf="link.icon">{{link.icon}}</mat-icon>
                             {{link.name}}
                         </button>
