--- a/projects/crud/src/lib/components/listing/listing.component.html
+++ b/projects/crud/src/lib/components/listing/listing.component.html
@@ -90,7 +90,7 @@
                 <mat-header-cell id="{{getColId(column.header)}}" *matHeaderCellDef>{{ column.header }}</mat-header-cell>
                 <mat-cell id="{{'cell-'+i}}" *matCellDef="let row">
                     <ng-container *ngIf="viewConfig?.external_link?.link;else normal">
-                        <a class="clickable" [routerLink]="'hms/'+this.viewConfig.external_link.link+row?.id"
+                        <a class="clickable" (click) ="redirect(row?.id)"
                             *ngIf="(mode !== 'pick' && column.clickable); else normalCell">
                             {{ column.cell(row)}}
                         </a>
