--- a/projects/crud/src/lib/components/model-form/model-form.component.scss
+++ b/projects/crud/src/lib/components/model-form/model-form.component.scss
@@ -173,6 +173,14 @@ mat-panel-title {
     width: 100%;
 }
 
+.wide-save-btn {
+    width: 119px;
+    background-color: #5AB857;
+    color: #fff;
+    margin-bottom: 20px;
+    width: 119px;
+}
+
 @media only screen and (max-width: 600px) {
     .field-wrapper {
         margin: 4px;
