--- a/projects/crud/src/lib/components/listing/listing.component.html
+++ b/projects/crud/src/lib/components/listing/listing.component.html
@@ -22,7 +22,7 @@
     </div>
     <h2 mat-dialog-title style="padding:10px;" class="separated" *ngIf="viewConfig.dialog_mode">
         <span> {{viewConfig.title}}</span>
-        <mat-icon class="cancel_icon" (click)="cancel()">cancel</mat-icon>
+        <mat-icon class="cancel_icon" (click)="cancel()" id="close-dialog-icon">cancel</mat-icon>
     </h2>
     <ng-container *ngIf="viewConfig?.dialog_settings?.add_new_btn">
         <div class="dilaog-btns-container" [ngStyle]="{'display': (initialLoading) ? 'none':'block'}">
