--- a/projects/crud/src/lib/components/formset/formset.component.scss
+++ b/projects/crud/src/lib/components/formset/formset.component.scss
@@ -23,3 +23,10 @@
     background-color: #5BB859;
     color: #fff;
 }
+.formset_container {
+    background-color: rgba(128, 128, 128, 0.15);
+    background-color: hsla(0,0%,50.2%,.15);
+    border-radius: 4px;
+    margin: 10px 0px 10px;
+    padding: 10px;
+}
