--- a/projects/crud/src/lib/components/model-form/model-form.component.html
+++ b/projects/crud/src/lib/components/model-form/model-form.component.html
@@ -6,44 +6,90 @@
     <div class="crud-form-body" [ngStyle]="{'display': (initialLoading && mode==='edit')?'none':''}">
         <ng-template [ngIf]="is_ready">
             <ng-error-handling></ng-error-handling>
-            <div class="header_btn_container" *ngIf="viewConfig?.metadata?.formActions && mode==='edit'">
-                <span class="header_btns">
-                    <ng-container *ngFor="let link of viewConfig?.metadata?.formActions">
-                        <button *ngIf="link?.isShown" mat-button class="header_btn" [ngStyle]="getStyles(link)"
-                            id="{{link.name}}-btn" (click)="onAction(link)">
-                            <mat-icon *ngIf="link.icon">{{link.icon}}</mat-icon>
-                            {{link.name}}
-                        </button>
-                    </ng-container>
-                </span>
+            <div style="width:100%;">
+                <div class="header_btn_container" *ngIf="viewConfig?.metadata?.formActions && mode==='edit'">
+                    <span class="header_btns">
+                        <ng-container>
+                            <button mat-raised-button *ngIf="captureIdButton?.isShown" class="header_btn"
+                                [ngStyle]="getStyles(captureIdButton)" id="{{captureIdButton.name}}-btn"
+                                (click)="onAction(captureIdButton)" style="margin-right: 5px;">
+                                <mat-icon *ngIf="captureIdButton.icon">{{captureIdButton.icon}}</mat-icon>
+                                {{captureIdButton.name}}
+                            </button>
+                            <button mat-raised-button [matMenuTriggerFor]="menu">
+                                <mat-icon>more_horiz</mat-icon>
+                            </button>
+                            <mat-menu #menu="matMenu">
+                                <div *ngFor="let link of actionButtons">
+                                    <button *ngIf="link?.isShown" mat-button class="header_btn"
+                                        [ngStyle]="getStyles(link)" id="{{link.name}}-btn" (click)="onAction(link)">
+                                        <mat-icon *ngIf="link.icon">{{link.icon}}</mat-icon>
+                                        {{link.name}}
+                                    </button>
+                                </div>
+                            </mat-menu>
+                        </ng-container>
+                    </span>
+                </div>
             </div>
-
 
             <div fxflexfill fxlayoutgap="10px grid" class="row full" [formGroup]="formGroup">
                 <ng-container *ngFor="let config of _visibleControls">
                     <ng-container *ngIf="config?.type === 'fieldset'">
-                        <div class="field-wrapper" [style.max-width.%]="config.cssWidth"
-                            [style.flex.%]="config.cssWidth" style="margin: 4px;">
-                            <mat-accordion>
-                                <mat-expansion-panel class="crud_expansion_panel" [expanded]="true">
-                                    <mat-expansion-panel-header [collapsedHeight]="'40px'" [expandedHeight]="'40px'">
-                                        <mat-panel-title class="panel_title">
-                                            <mat-label>{{ config?.label }}</mat-label>
-                                        </mat-panel-title>
-                                    </mat-expansion-panel-header>
-                                    <ng-container *ngFor="let config2 of config?.control?.fields">
-                                        <div *ngIf="config2?.isEditable"
-                                            style="width:47%;display:inline-block; box-sizing: border-box;"
-                                            [style.width.%]="config2.cssWidth">
-                                            <ng-crud-form-field class="FormCell" [style.flex.%]="config.cssWidth"
-                                                [reset]="submit" [formGroup]="formGroup" [mode]="mode"
-                                                [config]="config2" (elementDeleted)="elementDeleted($event)">
-                                            </ng-crud-form-field>
-                                        </div>
-                                    </ng-container>
-                                </mat-expansion-panel>
-                            </mat-accordion>
-                        </div>
+                        <mat-accordion style="width: 100%; margin: 10px;">
+                            <mat-expansion-panel class="crud_expansion_panel" [expanded]="config.expanded !== undefined ? config.expanded : true">
+                                <mat-expansion-panel-header [collapsedHeight]="'40px'" [expandedHeight]="'40px'">
+                                    <mat-panel-title class="panel_title">
+                                        <mat-label>{{config?.label}}</mat-label>
+                                    </mat-panel-title>
+                                </mat-expansion-panel-header>
+                                <ng-container *ngFor="let config2 of config?.control?.fields">
+                                    <div *ngIf="config2?.isEditable"
+                                        style="width:25%;display:inline-block; box-sizing: border-box;"
+                                        [style.width.%]="config2.cssWidth">
+                                        <ng-crud-form-field class="FormCell" [style.flex.%]="config.cssWidth"
+                                            [reset]="submit" [config]="config2" [mode]="mode" [formGroup]="formGroup"
+                                            (elementDeleted)="elementDeleted($event)">
+                                        </ng-crud-form-field>
+                                    </div>
+                                </ng-container>
+                                <ng-container *ngIf="config?.control?.subFields">
+                                    <div class="formset_container">
+                                        <mat-divider class="divider"></mat-divider>
+                                        <ng-container *ngFor="let config3 of subFormsets; let i=index">
+                                            <div class="formset_container">
+                                                <ng-crud-formset [config]="config3" [mode]="mode"
+                                                    [formGroup]="formGroup">
+                                                </ng-crud-formset>
+                                            </div>
+                                        </ng-container>
+                                    </div>
+                                </ng-container>
+                                <ng-container *ngIf="config?.control?.collapsibleFields">
+                                    <div class="formset_container">
+                                        <mat-accordion>
+                                            <mat-expansion-panel id="collapsible_control" [expanded]="false">
+                                                <mat-expansion-panel-header class="specific-class">
+                                                    <mat-divider class="divider"></mat-divider>
+                                                </mat-expansion-panel-header>
+                                                <ng-container
+                                                    *ngFor="let config2 of config?.control?.collapsibleFields">
+                                                    <div *ngIf="config2?.isEditable"
+                                                        style="width:25%;display:inline-block; box-sizing: border-box;"
+                                                        [style.width.%]="config2.cssWidth">
+                                                        <ng-crud-form-field class="FormCell"
+                                                            [style.flex.%]="config.cssWidth" [reset]="submit"
+                                                            [config]="config2" [mode]="mode" [formGroup]="formGroup"
+                                                            (elementDeleted)="elementDeleted($event)">
+                                                        </ng-crud-form-field>
+                                                    </div>
+                                                </ng-container>
+                                            </mat-expansion-panel>
+                                        </mat-accordion>
+                                    </div>
+                                </ng-container>
+                            </mat-expansion-panel>
+                        </mat-accordion>
                     </ng-container>
                     <ng-container *ngIf="config.type !== 'fieldset' && config.type !== 'formset' && config.isEditable">
                         <div *ngIf="mode==='edit' || mode==='create';else search" class="crud_edit_fields">
@@ -62,7 +108,7 @@
                             <mat-expansion-panel class="crud_expansion_panel" [expanded]="true">
                                 <mat-expansion-panel-header [collapsedHeight]="'40px'" [expandedHeight]="'40px'">
                                     <mat-panel-title class="panel_title">
-                                        <mat-label>{{config.label}}</mat-label>
+                                        <mat-label>{{config?.label}}</mat-label>
                                     </mat-panel-title>
                                 </mat-expansion-panel-header>
                                 <ng-container *ngFor="let config of formsets; let i=index">
